src/components/EventsCalendar/EventsCalendar.scss
@use "/src/styles/__globals" as *;
@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
@import url(https://fonts.googleapis.com/icon?family=Material+Icons);

.icon {
  font-family: 'Material Icons', serif;
  font-style: normal;
  display: inline-block;
  vertical-align: middle;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;

  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
}

<<<<<<<< HEAD:src/pages/EventListingsPage/EventListingsPage.scss

/* VARIABLES */

// :root {
//   --main-color: #1a8fff;
//   --text-color: #777;
//   --text-color-light: #ccc;
//   --border-color: #eee;
//   --bg-color: #f9f9f9;
//   --neutral-color: #fff;
// }


/* GENERAL */

// * {
//   box-sizing: border-box;
// }

// body {
//     font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
//     font-size: 1em;
//     font-weight: 300;
//     line-height: 1.5;
//     color: var(--text-color);
//     background: var(--bg-color);
//     position: relative;
// }

// header {
//   display: block;
//   width: 100%;
//   padding: 1.75em 0;
//   border-bottom: 1px solid var(--border-color);
//   background: var(--neutral-color);
// }

// header #logo {
//   font-size: 175%;
//   text-align: center;
//   color: var(--main-color);
//   line-height: 1;
// }

header #logo .icon {
  padding-right: .25em;
}

/* GRID */

========
>>>>>>>> separate-calendar-component:src/components/EventsCalendar/EventsCalendar.scss
.row {
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
}

.row-middle {
  align-items: center;
}

.col {
  flex-grow: 1;
  flex-basis: 0;
  max-width: 100%;
}

.col-start {
  justify-content: flex-start;
  text-align: left;
}

.col-center {
  justify-content: center;
  text-align: center;
}

.col-end {
  justify-content: flex-end;
  text-align: right;
}


/* Calendar */

.calendar {
  display: block;
  position: relative;
  width: 90%;
  margin: 0 auto!important;
  // background: transparent;
}

.calendar .header {
  text-transform: uppercase;
  letter-spacing: 0.1em;
  font-size: 115%;
  padding: 1em 0;
}

.calendar .header .icon {
  cursor: pointer;
  transition: .15s ease-out;
}

.calendar .header .icon:hover {
  transform: scale(1.5);
  transition: .25s ease-out;
}

.calendar .header .icon:first-of-type {
  margin-left: 1em;
}

.calendar .header .icon:last-of-type {
  margin-right: 1em;
}

.calendar .days {
  text-transform: uppercase;
  font-weight: 400;
  font-size: 70%;
  padding: .75em 0;
  border-bottom: 1px solid $purple;
}

.calendar .body .cell {
  position: relative;
  height: 5em;
  overflow: hidden;
  cursor: pointer;
  transition: 0.25s ease-out;
  // border: 1px solid rgba(250,250,250,0.3);
  opacity: 0.8;
  // border: 1px solid $purple;
}

.calendar .body .cell:hover {
  opacity: 1;
  // transform: scale(1.1);
  z-index: 2;
  // border: 3px solid $light-purple;
  box-shadow: 1px 1px 6px 1px $light-purple;

}

.calendar .body .cell .number {
  position: absolute;
  font-size: 82.5%;
  line-height: 1;
  top: .75em;
  right: .75em;
  font-weight: 700;
  z-index: 2;
}

.calendar .body .disabled {
  pointer-events: none;
}

.calendar .body .cell .bg {
  font-weight: 700;
  line-height: 1;
  opacity: 1;
  font-size: 8em;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  object-fit: cover;
  transition: .25s ease-out;
  letter-spacing: -.07em;
}

.bg {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    object-fit: cover;
}

.calendar .body .cell:hover .bg, .calendar .body .selected .bg  {
  opacity: 1;
  transition: .5s ease-in;
}

.calendar .body .col {
  flex-grow: 0;
  flex-basis: calc(100%/7);
  width: calc(100%/7);
}

